--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tiptap/starter-kit": "^2.5.5",
     "@uploadthing/react": "^6.7.2",
     "@vercel/analytics": "^1.4.0",
+    "@vercel/speed-insights": "^1.1.0",
     "arctic": "^1.9.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
