--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,8 @@
 {
-  "crons": [
-    {
-      "path": "/api/clear-uploads",
-      "schedule": "0 2 * * *"
-    }
-  ],
+  "crons": {
+    "path": "/api/clear-uploads",
+    "schedule": "0 2 * * *"
+  },
   "functions": {
     "api/test.js": {
       "memory": 3009
