--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-query": "^5.51.11",
     "@tanstack/react-query-devtools": "^5.51.11",
+    "@tiptap/extension-character-count": "^2.9.1",
     "@tiptap/extension-placeholder": "^2.5.5",
     "@tiptap/pm": "^2.5.5",
     "@tiptap/react": "^2.5.5",
