--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@neondatabase/serverless": "^0.9.5",
     "@prisma/adapter-neon": "^5.21.1",
     "@prisma/client": "^5.21.1",
+    "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.3",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
@@ -35,6 +37,7 @@
     "arctic": "^1.9.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.4",
     "date-fns": "^3.6.0",
     "ky": "^1.4.0",
     "lucia": "^3.2.0",
@@ -42,6 +45,7 @@
     "next": "15.0.0-rc.0",
     "next-auth": "^4.24.10",
     "next-themes": "^0.3.0",
+    "posthog-js": "^1.202.1",
     "prisma": "^5.17.0",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-cropper": "^2.3.3",
@@ -50,6 +54,7 @@
     "react-image-file-resizer": "^0.4.8",
     "react-intersection-observer": "^9.13.0",
     "react-linkify-it": "^1.0.8",
+    "recharts": "^2.15.0",
     "sharp": "^0.33.5",
     "stream-chat": "^8.37.0",
     "stream-chat-react": "^11.23.3",
