--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "cmdk": "^1.0.4",
     "date-fns": "^3.6.0",
     "ky": "^1.4.0",
+    "lowlight": "^3.3.0",
     "lucia": "^3.2.0",
     "lucide-react": "^0.414.0",
     "next": "15.0.0-rc.0",
     "next-auth": "^4.24.10",
     "next-themes": "^0.3.0",
+    "novel": "^0.5.0",
     "posthog-js": "^1.202.1",
     "prisma": "^5.17.0",
     "react": "19.0.0-rc-f994737d14-20240522",
