--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-select": "^2.1.3",
+    "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
@@ -33,6 +36,7 @@
     "@tiptap/starter-kit": "^2.5.5",
     "@uploadthing/react": "^7.1.1",
     "@vercel/analytics": "^1.4.0",
+    "@vercel/blob": "^0.27.0",
     "@vercel/speed-insights": "^1.1.0",
     "arctic": "^1.9.2",
     "class-variance-authority": "^0.7.0",
@@ -58,6 +62,7 @@
     "react-linkify-it": "^1.0.8",
     "recharts": "^2.15.0",
     "sharp": "^0.33.5",
+    "sonner": "^1.7.1",
     "stream-chat": "^8.37.0",
     "stream-chat-react": "^11.23.3",
     "tailwind-merge": "^2.4.0",
