--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "@tiptap/pm": "^2.5.5",
     "@tiptap/react": "^2.5.5",
     "@tiptap/starter-kit": "^2.5.5",
+    "@types/redis": "^4.0.11",
+    "@types/uuid": "^10.0.0",
     "@uploadthing/react": "^7.1.1",
+    "@upstash/redis": "^1.34.3",
     "@vercel/analytics": "^1.4.0",
     "@vercel/blob": "^0.27.0",
     "@vercel/speed-insights": "^1.1.0",
@@ -43,6 +46,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "date-fns": "^3.6.0",
+    "ioredis": "^5.4.2",
     "ky": "^1.4.0",
     "lowlight": "^3.3.0",
     "lucia": "^3.2.0",
@@ -53,6 +57,8 @@
     "novel": "^0.5.0",
     "posthog-js": "^1.202.1",
     "prisma": "^5.17.0",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-cropper": "^2.3.3",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
@@ -61,6 +67,7 @@
     "react-intersection-observer": "^9.13.0",
     "react-linkify-it": "^1.0.8",
     "recharts": "^2.15.0",
+    "redis": "^4.7.0",
     "sharp": "^0.33.5",
     "sonner": "^1.7.1",
     "stream-chat": "^8.37.0",
