--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "date-fns": "^3.6.0",
+    "framer-motion": "^12.0.6",
     "ioredis": "^5.4.2",
     "ky": "^1.4.0",
     "lowlight": "^3.3.0",
